# tappingsim

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.claude/: settings.local.json
docs/: Makefile  conf.py  index.rst
docs/api/: furnaces.rst  index.rst  ladles.rst  launders.rst  tappingsystems.rst
docs/examples/: index.rst
docs/notebooks/: examples_tappingsystems.ipynb
ladlesim/: __init__.py  cite.py  coldmodels.py  femn.py  furnaces.py  ladles.py
notebooks/: examples_furnaces.ipynb
tappingsim/: __init__.py  furnaces.py  ladles.py  launders.py  tappingsystems.py
tests/: test_furnaces.py  test_ladles.py  test_launders.py  test_tappingsystems.py
