[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tappingsim"
version = "2.0.0"
description = "Reduced-order modelling of furnace tapping systems"
license = "MIT"
authors = [{ name = "Quinn Reynolds", email = "quinnr@mintek.co.za" }]
requires-python = ">=3.8"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx"]

[tool.setuptools.packages.find]
include = ["tappingsim*"]

[project.urls]
Homepage = "https://github.com/quinnreynolds/tappingsim"

[tool.pycodestyle]
max-line-length = 99

[tool.ruff]
line-length = 99
